--- a/index.html
+++ b/index.html
@@ -10,39 +10,50 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css" />
     <title>Day 2 - Batch 3</title>
   </head>
   <body>
     <div class="container">
-      <h1>Belajar Javascript</h1>
-      <h2>Hari ke 2</h2>
-      <h3>Kalkulator Sederhana</h3>
-    </div>
-    <div class="calculator">
-        <div class="calculator-display">
-            
+      <header>
+        <div>
+          <h1>Belajar Javascript</h1>
+          <h2>Hari ke 2</h2>
+          <h3>Kalkulator Sederhana</h3>
         </div>
-        <div class="calculator-content">
-          <button class="operator" data-action="add">+</button>
-          <button class="operator" data-action="subtract">-</button>
-          <button class="operator" data-action="multiply">&times;</button>
-          <button class="operator" data-action="divide">÷</button>
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>0</button>
-          <button data-action="decimal">.</button>
-          <button data-action="clear">C</button>
-          <button class="equal" data-action="calculate">=</button>
+      </header>
+
+      <main>
+        <div class="calculator">
+          <div class="calculator-display"></div>
+          <div class="calculator-content">
+            <button class="operator" data-action="add">+</button>
+            <button class="operator" data-action="subtract">-</button>
+            <button class="operator" data-action="multiply">&times;</button>
+            <button class="operator" data-action="divide">÷</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>0</button>
+            <button data-action="decimal">.</button>
+            <button data-action="clear">C</button>
+            <button class="equal" data-action="calculate">=</button>
+          </div>
         </div>
+      </main>
+
+      <footer>
+        <p>Hacktiv8 FB DevC JavaScript Program</p>
+        <p>Javascript Development Class - Batch 3</p>
+      </footer>
+
+      <script src="index.js"></script>
     </div>
-    <script src="index.js"></script>
   </body>
 </html>
