add simple calculator, using input value

--- a/index.html
+++ b/index.html
@@ -46,6 +46,27 @@
             <button class="equal" data-action="calculate">=</button>
           </div>
         </div>
+
+        <div>
+          <h3>Menggunakan Input</h3>
+          <div>
+            <div>
+              Value Pertama : <input type="number" id="firstValue" aria-label="Large"/>
+              <br />
+              Value Kedua : <input type="number" id="secondValue" />
+            </div>
+            <div>
+              <button class="addition">+</button>
+              <button class="subtraction">-</button>
+              <button class="multiplication">*</button>
+              <button class="division">/</button>
+              <button class="percentage">%</button>
+            </div>
+            <div>
+                Hasil : <input type="text" id="displayResult" readonly />
+            </div>
+          </div>
+        </div>
       </main>
 
       <footer>
