--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="second-calculator">
-          <h3>Menggunakan Input</h3>
+          <h3 class="title">Menggunakan Input</h3>
           <div class="row">
             <div class="col">
               Value Pertama :
