--- a/index.html
+++ b/index.html
@@ -55,13 +55,21 @@
                 <div class="form-group row">
                   <label class="col-sm-3 col-form-label">Angka 1</label>
                   <div class="col-sm-9">
-                    <input type="number" id="firstValue" placeholder="masukan angka"/>
+                    <input
+                      type="number"
+                      id="firstValue"
+                      placeholder="masukan angka"
+                    />
                   </div>
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-3 col-form-label">Angka 2</label>
                   <div class="col-sm-9">
-                    <input type="number" id="secondValue" placeholder="masukan angka"/>
+                    <input
+                      type="number"
+                      id="secondValue"
+                      placeholder="masukan angka"
+                    />
                   </div>
                 </div>
               </form>
@@ -72,14 +80,13 @@
               <button class="subtraction btn btn-secondary">-</button>
               <button class="multiplication btn btn-success">*</button>
               <button class="division btn btn-danger">/</button>
-              <button class="percentage btn btn-warning">%</button>
             </div>
             <div class="col">
               <form>
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label">Hasil</label>
                   <div class="col-sm-10">
-                    <div id="displayResult"> </div>
+                    <div id="displayResult"></div>
                   </div>
                 </div>
               </form>
